--- a/app/user/view/index/accountSettings_security.html
+++ b/app/user/view/index/accountSettings_security.html
@@ -276,10 +276,10 @@
                                         <tbody>
                                         <tr class="gradeX">
                                             <td>API</td>
-                                            <td>{$variable_domain.'/api/'}</td>
+                                            <td>{$variable_domain}</td>
                                             <td>
                                                 <div class="tpl-table-black-operation">
-                                                    <a href="javascript:copyText('{$variable_domain.\'/api/\'}');">
+                                                    <a href="javascript:copyText('{$variable_domain}');">
                                                         <i class="am-icon-copy"></i> 复制
                                                     </a>
                                                 </div>
