--- a/app/user/view/index/index.html
+++ b/app/user/view/index/index.html
@@ -26,11 +26,11 @@
     <script src="assets/js/theme.js"></script>
     <div class="am-g tpl-g">
         <!-- 头部 -->
-        {$page_header_body}
+        {:$page_header_body}
         <!-- 风格切换 -->
-        {$page_skiner}
+        {:$page_skiner}
         <!-- 侧边导航栏 -->
-        {$page_sidebar}
+        {:$page_sidebar}
 
 
         <!-- 内容区域 -->
