--- a/app/user/view/index/channel_list.html
+++ b/app/user/view/index/channel_list.html
@@ -10,19 +10,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="renderer" content="webkit">
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
-    <link rel="icon" type="image/png" href="../../../assets/i/favicon.png">
-    <link rel="apple-touch-icon-precomposed" href="../../../assets/i/app-icon72x72@2x.png">
+    <link rel="icon" type="image/png" href="../../assets/i/favicon.png">
+    <link rel="apple-touch-icon-precomposed" href="../../assets/i/app-icon72x72@2x.png">
     <meta name="apple-mobile-web-app-title" content="Amaze UI"/>
-    <link rel="stylesheet" href="../../../assets/css/amazeui.min.css"/>
-    <link rel="stylesheet" href="../../../assets/css/amazeui.datatables.min.css"/>
-    <link rel="stylesheet" href="../../../assets/css/app.css">
-    <link rel="stylesheet" href="../../../assets/css/jquery-confirm.min.css">
+    <link rel="stylesheet" href="../../assets/css/amazeui.min.css"/>
+    <link rel="stylesheet" href="../../assets/css/amazeui.datatables.min.css"/>
+    <link rel="stylesheet" href="../../assets/css/app.css">
+    <link rel="stylesheet" href="../../assets/css/jquery-confirm.min.css">
     <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
 
 </head>
 
 <body data-type="widgets">
-<script src="../../../assets/js/theme.js"></script>
+<script src="../../assets/js/theme.js"></script>
 <div class="am-g tpl-g">
     <!-- 头部 -->
     {:$page_header_body}
@@ -234,9 +234,9 @@
 
 <script src="http://cdn.bootcss.com/amazeui/2.7.2/js/amazeui.min.js"></script>
 
-<script src="../../../assets/js/jquery-confirm.min.js"></script>
+<script src="../../assets/js/jquery-confirm.min.js"></script>
 
-<script src="../../../assets/js/app.js"></script>
+<script src="../../assets/js/app.js"></script>
 <script>
     // 函数
     function edit_channel(type,id){
