--- a/app/user/view/index/other/header_body.html
+++ b/app/user/view/index/other/header_body.html
@@ -1,7 +1,7 @@
 <header>
   <!-- logo -->
   <div class="am-fl tpl-header-logo">
-    <a href="javascript:;"><img src="assets/img/logo.png" alt=""></a>
+    <a href="javascript:;"><img src="{$page_config['user']}../../assets/img/logo.png" alt=""></a>
   </div>
   <!-- 右侧内容 -->
   <div class="tpl-header-fluid">
@@ -37,7 +37,7 @@
             <li class="tpl-dropdown-menu-messages">
               <a href="javascript:;" class="tpl-dropdown-menu-messages-item am-cf">
                 <div class="menu-messages-ico">
-                  <img src="assets/img/user04.png" alt="">
+                  <img src="{$page_config['user']}../../assets/img/user04.png" alt="">
                 </div>
                 <div class="menu-messages-time">
                   3小时前
@@ -56,7 +56,7 @@
             <li class="tpl-dropdown-menu-messages">
               <a href="javascript:;" class="tpl-dropdown-menu-messages-item am-cf">
                 <div class="menu-messages-ico">
-                  <img src="assets/img/user02.png" alt="">
+                  <img src="{$page_config['user']}../../assets/img/user02.png" alt="">
                 </div>
                 <div class="menu-messages-time">
                   5天前
