--- a/app/user/view/index/other/header_body.html
+++ b/app/user/view/index/other/header_body.html
@@ -133,7 +133,7 @@
 
         <!-- 退出 -->
         <li class="am-text-sm">
-          <a href="javascript:;">
+          <a href="javascript:logout();">
             <span class="am-icon-sign-out"></span> 退出
           </a>
         </li>
