--- a/app/user/view/index/channel_list.html
+++ b/app/user/view/index/channel_list.html
@@ -177,7 +177,7 @@
                                                         </span></td>
                                         {/if}
 
-                                        {if ($channel_list_key.status==0)}
+                                        {if ($channel_list_key.status=='0')}
                                         <td class="am-text-middle"><span class="am-alert am-alert-success" onclick="edit_channel('status',{$channel_list_key.id})">
                                                      启用
                                                 </span></td>
